<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cn</groupId>
    <artifactId>minimalist-saas</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>minimalist-basic</module>
        <module>minimalist-application</module>
        <module>minimalist-common</module>
    </modules>

    <properties>
        <!-- springboot版本 -->
        <springboot.version>3.1.1</springboot.version>
        <!-- redisson版本 -->
        <redisson.version>3.36.0</redisson.version>
        <!-- mysql驱动版本 -->
        <mysql.version>8.0.33</mysql.version>
        <!-- mybatis-plus版本 -->
        <mp.version>3.5.3.1</mp.version>
        <!-- mybatis-plus 生成代码 -->
        <mpg.version>3.5.3.1</mpg.version>
        <!-- mybatis-plus 生成代码依赖的velocity-engine-core版本 -->
        <vec.version>2.3</vec.version>
        <!-- hutool工具包 -->
        <hutool.version>5.8.32</hutool.version>
        <!-- sa-token -->
        <satoken.version>1.39.0</satoken.version>
        <!-- servlet -->
        <servlet.version>4.0.1</servlet.version>
        <!-- knife4j -->
        <knife4j.version>4.1.0</knife4j.version>
        <!-- spring-file -->
        <spring-file.version>0.7.0</spring-file.version>
        <!-- tika -->
        <tika.version>2.8.0</tika.version>
        <!-- mica-xss -->
        <mica-xss.version>3.1.1</mica-xss.version>
        <!-- TTL -->
        <ttl.version>2.14.3</ttl.version>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- springboot统一依赖管理 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- 打包指定启动类 -->
                    <mainClass>com.minimalist.application.MinimalistBasicApplication</mainClass>
                    <!-- 打包为可执行文件 -->
                    <classifier>exec</classifier>
                    <!-- 打包时忽略的包 -->
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                        <exclude>
                            <groupId>org.apache.velocity</groupId>
                            <artifactId>velocity-engine-core</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
